# mcp-musicbrainz

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.kiro/settings/: lsp.json
mcp_musicbrainz/: __init__.py  asgi.py  http_server.py  server.py  sse_server.py
mcp_musicbrainz/throttling/: base.py  token_bucket.py
tests/: conftest.py  test_cached_tool.py  test_new_tools.py  test_server.py  test_tools.py
